@@ -15,7 +15,7 @@ use List::Compare;
 use List::MoreUtils qw(none uniq firstval);
 use Scalar::Util qw(weaken);
 
-our $VERSION = '1.54';
+our $VERSION = '1.55';
 
 my %translation = (
 	2  => 'Polizeiliche Ermittlung',
@@ -841,7 +841,7 @@ arrival/departure received by Travel::Status::DE::IRIS
 
 =head1 VERSION
 
-version 1.54
+version 1.55
 
 =head1 DESCRIPTION
 
